<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_app"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.digging.coroutine.ui.home.HomeFragment"
        android:label="@string/home_screen_label" >
        <action
            android:id="@+id/action_homeFragment_to_requestFragment"
            app:destination="@id/requestFragment" />
        <action
            android:id="@+id/action_homeFragment_to_processFragment"
            app:destination="@id/processFragment" />
        <action
            android:id="@+id/action_homeFragment_to_multiProcessFragment"
            app:destination="@id/multiProcessFragment" />
        <action
            android:id="@+id/action_homeFragment_to_raceFragment"
            app:destination="@id/raceFragment" />
    </fragment>

    <fragment
        android:id="@+id/requestFragment"
        android:name="com.digging.coroutine.ui.request.RequestFragment"
        android:label="@string/request_screen_label" />
    <fragment
        android:id="@+id/processFragment"
        android:name="com.digging.coroutine.ui.process.ProcessFragment"
        android:label="@string/single_process_screen_label" />
    <fragment
        android:id="@+id/multiProcessFragment"
        android:name="com.digging.coroutine.ui.multi_process.MultiProcessFragment"
        android:label="@string/multi_process_screen_label" />
    <fragment
        android:id="@+id/raceFragment"
        android:name="com.digging.coroutine.ui.race.RaceFragment"
        android:label="RaceFragment" />
</navigation>