<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbStartProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_multi_process"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/clpLoadingJobOne"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:theme="@style/ContentLoadingProgress"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clpLoadingJobTwo"
        app:layout_constraintTop_toBottomOf="@+id/mbStartProcess"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvTitleLoadingJobOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/job_one"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/clpLoadingJobOne"
        app:layout_constraintTop_toBottomOf="@+id/clpLoadingJobOne"
        app:layout_constraintEnd_toEndOf="@+id/clpLoadingJobOne"
        tools:visibility="visible"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/clpLoadingJobTwo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:theme="@style/ContentLoadingProgress"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintStart_toEndOf="@+id/clpLoadingJobOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbStartProcess"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvTitleLoadingJobTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/job_two"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/clpLoadingJobTwo"
        app:layout_constraintTop_toBottomOf="@+id/clpLoadingJobTwo"
        app:layout_constraintEnd_toEndOf="@+id/clpLoadingJobTwo"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/brLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="mtvTitleLoadingJobOne, mtvTitleLoadingJobTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancelJobOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_job_one"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:backgroundTint="@color/red_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brLoading"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancelJobTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_job_two"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:backgroundTint="@color/red_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbCancelJobOne"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancelAllScope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_all_scope"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:backgroundTint="@color/red_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbCancelJobTwo"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>