<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtxTitleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_news_title"
        android:gravity="center"
        android:layout_marginTop="16dp"
        style="@style/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/clpLoading"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtxTitleHome" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtxTitleEmptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_title"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtxTitleHome" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtxTitleErrorState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtxTitleHome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtxTitleHome"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        tools:listitem="@layout/item_news" />

</androidx.constraintlayout.widget.ConstraintLayout>